--- a/openGL3D/openGL3D.vcxproj
+++ b/openGL3D/openGL3D.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="WindowMan.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Input.h" />
     <ClInclude Include="WindowMan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
