--- a/openGL3D/openGL3D.vcxproj.filters
+++ b/openGL3D/openGL3D.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Square.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowMan.h">
@@ -50,13 +53,8 @@
     <ClInclude Include="GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="shader.vert">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="shader.frag">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
+    <ClInclude Include="Square.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
