--- a/openGL3D/openGL3D.vcxproj
+++ b/openGL3D/openGL3D.vcxproj
@@ -145,6 +145,10 @@
     <ClInclude Include="Square.h" />
     <ClInclude Include="WindowMan.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.frag" />
+    <None Include="shader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
