--- a/openGL3D/openGL3D.vcxproj
+++ b/openGL3D/openGL3D.vcxproj
@@ -156,6 +156,7 @@
     <None Include="Resources\Shaders\shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Resources\Textures\compass.png" />
     <Image Include="Resources\Textures\wall.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
