--- a/openGL3D/openGL3D.vcxproj.filters
+++ b/openGL3D/openGL3D.vcxproj.filters
@@ -96,5 +96,8 @@
     <Image Include="Resources\Textures\wall.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+    <Image Include="Resources\Textures\compass.png">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
